--- a/PurplerArtsWeb/PurplerArtsWeb.csproj
+++ b/PurplerArtsWeb/PurplerArtsWeb.csproj
@@ -1,9 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.12"/>
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.1-dev-00077"/>
+  </ItemGroup>
 </Project>
