--- a/PurplerArtsWeb/PurplerArtsWeb.csproj
+++ b/PurplerArtsWeb/PurplerArtsWeb.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.12"/>
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.1-dev-00077"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.12"/>
   </ItemGroup>
 </Project>
