--- a/PurplerArtsWeb/appsettings.json
+++ b/PurplerArtsWeb/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WazeCreditGreen;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WazeForecast": {
+    "ForecastTrackerEnabled": true
+  },
+  "Stripe": {
+    "SecretKey": "sk_test_WKWERWEDF324234l1BJwR00mx0mZGy8",
+    "PublishableKey": "pk_test_ct2earmEUGF23423423RER0FoTuud0j"
+  },
+  "Twilio": {
+    "PhoneNumber": "+1222345323",
+    "AuthToken": "ea84",
+    "AccountSid": "AC58"
+  },
+  "SendGrid": {
+    "SendGridKey": "SengGridSampleKey11112222"
+  }
 }
